services/payments-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-service
  namespace: order-platform
spec:
  selector:
    app: payments-service
  ports:
    - port: 8082
      targetPort: 8082
